--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,29 +1,84 @@
 [versions]
+# gradle
 agp = "8.6.1"
-kotlin = "1.9.0"
+ksp = "2.0.0-1.0.24"
+
+# kotlin
+kotlin = "2.0.0"
+jetbrainsKotlinJvm = "2.0.0"
+
+# android
 coreKtx = "1.13.1"
+appcompat = "1.7.0"
+constraintlayout = "2.2.0"
+activity = "1.9.3"
+fragment-ktx = "1.8.2"
+lifecycle = "2.8.4"
+dagger-hilt = "2.51.1"
+
+# matarial + google
+material = "1.12.0"
+google-services = "4.4.2"
+google-play-services = "20.5.0"
+
+# navigation
+navigationUiKtx = "2.8.4"
+navigationFragmentKtx = "2.8.4"
+
+# firebase
+firebaseAuth = "23.1.0"
+firebaseBom = "33.5.1"
+firestore = "25.1.1"
+firebaseStorageKtx = "21.0.1"
+
+# test
 junit = "4.13.2"
 junitVersion = "1.2.1"
 espressoCore = "3.6.1"
-appcompat = "1.7.0"
-material = "1.12.0"
-activity = "1.9.3"
-constraintlayout = "2.2.0"
-jetbrainsKotlinJvm = "1.9.0"
-ksp = "2.0.0-1.0.24"
-dagger-hilt = "2.51.1"
+
+
 
 [libraries]
+# kotlin
+agp = { module = "com.android.tools.build:gradle", version.ref = "agp" }
+
+# android
+androidx-appcompat = { group = "androidx.appcompat", name = "appcompat", version.ref = "appcompat" }
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
+androidx-activity = { group = "androidx.activity", name = "activity", version.ref = "activity" }
+fragment-ktx = { module = "androidx.fragment:fragment-ktx", version.ref = "fragment-ktx" }
+lifecycle-viewmodel = { module = "androidx.lifecycle:lifecycle-viewmodel-ktx", version.ref = "lifecycle" }
+androidx-constraintlayout = { group = "androidx.constraintlayout", name = "constraintlayout", version.ref = "constraintlayout" }
+
+androidx-navigation-fragment-ktx = { group = "androidx.navigation", name = "navigation-fragment-ktx", version.ref = "navigationFragmentKtx" }
+androidx-navigation-ui-ktx = { group = "androidx.navigation", name = "navigation-ui-ktx", version.ref = "navigationUiKtx" }
+androidx-navigation-safe-args = { group = "androidx.navigation", name = "navigation-safe-args-gradle-plugin", version.ref = "navigationFragmentKtx" }
+
+# hilt
+hilt-android = { group = "com.google.dagger", name = "hilt-android", version.ref = "dagger-hilt" }
+hilt-compiler =  { group = "com.google.dagger", name = "hilt-compiler", version.ref = "dagger-hilt" }
+hilt-plugin = { group = "com.google.dagger", name = "hilt-android-gradle-plugin", version.ref = "dagger-hilt" }
+
+# material + google
+material = { group = "com.google.android.material", name = "material", version.ref = "material" }
+google-services = { module = "com.google.gms:google-services", version.ref = "google-services" }
+google-play-services = { group = "com.google.android.gms", name = "play-services-base", version.ref = "google-play-services" }
+
+# firebase
+firebase-auth = { module = "com.google.firebase:firebase-auth", version.ref = "firebaseAuth" }
+firebase-bom = { module = "com.google.firebase:firebase-bom", version.ref = "firebaseBom" }
+firebase-firestore = { module = "com.google.firebase:firebase-firestore", version.ref = "firestore" }
+firebase-storage = { group = "com.google.firebase", name = "firebase-storage-ktx", version.ref = "firebaseStorageKtx" }
+
+# test
 junit = { group = "junit", name = "junit", version.ref = "junit" }
 androidx-junit = { group = "androidx.test.ext", name = "junit", version.ref = "junitVersion" }
 androidx-espresso-core = { group = "androidx.test.espresso", name = "espresso-core", version.ref = "espressoCore" }
-androidx-appcompat = { group = "androidx.appcompat", name = "appcompat", version.ref = "appcompat" }
-material = { group = "com.google.android.material", name = "material", version.ref = "material" }
-androidx-activity = { group = "androidx.activity", name = "activity", version.ref = "activity" }
-androidx-constraintlayout = { group = "androidx.constraintlayout", name = "constraintlayout", version.ref = "constraintlayout" }
-hilt-android = { group = "com.google.dagger", name = "hilt-android", version.ref = "dagger-hilt" }
-hilt-compiler =  { group = "com.google.dagger", name = "hilt-compiler", version.ref = "dagger-hilt" }
+
+
+
+# third party
+
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
@@ -32,4 +87,5 @@ android-library = { id = "com.android.library", version.ref = "agp" }
 jetbrains-kotlin-jvm = { id = "org.jetbrains.kotlin.jvm", version.ref = "jetbrainsKotlinJvm" }
 hilt-android = { id = "com.google.dagger.hilt.android", version.ref = "dagger-hilt" }
 ksp = { id = "com.google.devtools.ksp", version.ref = "ksp" }
+google-services = { id = "com.google.gms.google-services", version.ref = "google-services" }
 
