--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -19,7 +19,7 @@ dagger-hilt = "2.51.1"
 # matarial + google
 material = "1.12.0"
 google-services = "4.4.2"
-google-play-services = "20.5.0"
+google-play-services = "21.3.0"
 
 # navigation
 navigationUiKtx = "2.8.4"
@@ -38,6 +38,7 @@ espressoCore = "3.6.1"
 
 #third party
 glide = "4.16.0"
+naverMap = "3.20.0"
 
 
 
@@ -66,6 +67,7 @@ hilt-plugin = { group = "com.google.dagger", name = "hilt-android-gradle-plugin"
 material = { group = "com.google.android.material", name = "material", version.ref = "material" }
 google-services = { module = "com.google.gms:google-services", version.ref = "google-services" }
 google-play-services = { group = "com.google.android.gms", name = "play-services-base", version.ref = "google-play-services" }
+play-services-location =  { group = "com.google.android.gms", name = "play-services-location", version.ref = "google-play-services"}
 
 # firebase
 firebase-auth = { module = "com.google.firebase:firebase-auth", version.ref = "firebaseAuth" }
@@ -80,6 +82,7 @@ androidx-espresso-core = { group = "androidx.test.espresso", name = "espresso-co
 
 # third party
 glide = { module = "com.github.bumptech.glide:glide", version.ref = "glide"}
+naver-map = { group = "com.naver.maps", name = "map-sdk", version.ref = "naverMap"}
 
 
 [plugins]
