--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -26,10 +26,7 @@ navigationUiKtx = "2.8.4"
 navigationFragmentKtx = "2.8.4"
 
 # firebase
-firebaseAuth = "23.1.0"
-firebaseBom = "33.5.1"
-firestore = "25.1.1"
-firebaseStorageKtx = "21.0.1"
+firebaseBom = "33.7.0"
 
 # test
 junit = "4.13.2"
@@ -39,6 +36,7 @@ espressoCore = "3.6.1"
 #third party
 glide = "4.16.0"
 naverMap = "3.20.0"
+
 
 
 
@@ -60,20 +58,22 @@ androidx-navigation-safe-args = { group = "androidx.navigation", name = "navigat
 
 # hilt
 hilt-android = { group = "com.google.dagger", name = "hilt-android", version.ref = "dagger-hilt" }
-hilt-compiler =  { group = "com.google.dagger", name = "hilt-compiler", version.ref = "dagger-hilt" }
+hilt-compiler = { group = "com.google.dagger", name = "hilt-compiler", version.ref = "dagger-hilt" }
 hilt-plugin = { group = "com.google.dagger", name = "hilt-android-gradle-plugin", version.ref = "dagger-hilt" }
 
 # material + google
 material = { group = "com.google.android.material", name = "material", version.ref = "material" }
 google-services = { module = "com.google.gms:google-services", version.ref = "google-services" }
 google-play-services = { group = "com.google.android.gms", name = "play-services-base", version.ref = "google-play-services" }
-play-services-location =  { group = "com.google.android.gms", name = "play-services-location", version.ref = "google-play-services"}
+play-services-location = { group = "com.google.android.gms", name = "play-services-location", version.ref = "google-play-services" }
 
 # firebase
-firebase-auth = { module = "com.google.firebase:firebase-auth", version.ref = "firebaseAuth" }
 firebase-bom = { module = "com.google.firebase:firebase-bom", version.ref = "firebaseBom" }
-firebase-firestore = { module = "com.google.firebase:firebase-firestore", version.ref = "firestore" }
-firebase-storage = { group = "com.google.firebase", name = "firebase-storage-ktx", version.ref = "firebaseStorageKtx" }
+firebase-auth = { module = "com.google.firebase:firebase-auth" }
+firebase-firestore = { module = "com.google.firebase:firebase-firestore" }
+firebase-storage = { module = "com.google.firebase:firebase-storage" }
+firebase-common-ktx = { module = "com.google.firebase:firebase-common-ktx" }
+firebase-analytics = { module = "com.google.firebase:firebase-analytics" }
 
 # test
 junit = { group = "junit", name = "junit", version.ref = "junit" }
@@ -81,8 +81,9 @@ androidx-junit = { group = "androidx.test.ext", name = "junit", version.ref = "j
 androidx-espresso-core = { group = "androidx.test.espresso", name = "espresso-core", version.ref = "espressoCore" }
 
 # third party
-glide = { module = "com.github.bumptech.glide:glide", version.ref = "glide"}
-naver-map = { group = "com.naver.maps", name = "map-sdk", version.ref = "naverMap"}
+glide = { module = "com.github.bumptech.glide:glide", version.ref = "glide" }
+naver-map = { group = "com.naver.maps", name = "map-sdk", version.ref = "naverMap" }
+
 
 
 [plugins]
