--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -24,7 +24,9 @@ javaxInject = "1"
 # matarial + google
 material = "1.12.0"
 google-services = "4.4.2"
-google-play-services = "21.3.0"
+play-services-base = "21.3.0"
+play-services-auth = "21.3.0"
+
 
 # navigation
 navigationUiKtx = "2.8.5"
@@ -71,8 +73,9 @@ javax-inject = { module = "javax.inject:javax.inject", version.ref = "javaxInjec
 # material + google
 material = { group = "com.google.android.material", name = "material", version.ref = "material" }
 google-services = { module = "com.google.gms:google-services", version.ref = "google-services" }
-google-play-services = { group = "com.google.android.gms", name = "play-services-base", version.ref = "google-play-services" }
-play-services-location = { group = "com.google.android.gms", name = "play-services-location", version.ref = "google-play-services" }
+google-play-services = { group = "com.google.android.gms", name = "play-services-base", version.ref = "play-services-base" }
+play-services-location = { group = "com.google.android.gms", name = "play-services-location", version.ref = "play-services-base" }
+play-services-auth = { group = "com.google.android.gms", name = "play-services-auth", version.ref = "play-services-auth"}
 
 # firebase
 firebase-bom = { module = "com.google.firebase:firebase-bom", version.ref = "firebaseBom" }
