Added Profile Picture Update Logic, Data Transfer Using SafeArgs: MyPage to EditProfile

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -104,4 +104,5 @@ hilt-android = { id = "com.google.dagger.hilt.android", version.ref = "dagger-hi
 ksp = { id = "com.google.devtools.ksp", version.ref = "ksp" }
 google-services = { id = "com.google.gms.google-services", version.ref = "google-services" }
 kotlinx-serialization = { id = "org.jetbrains.kotlin.plugin.serialization", version.ref = "kotlin" }
+navigation-safe-args = { id = "androidx.navigation.safeargs.kotlin", version.ref = "navigationFragmentKtx" }
 
