--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -17,6 +17,9 @@ activity = "1.9.3"
 fragment-ktx = "1.8.5"
 lifecycle = "2.8.7"
 
+# room
+room = "2.6.1"
+
 # hilt
 dagger-hilt = "2.52"
 javaxInject = "1"
@@ -59,9 +62,16 @@ fragment-ktx = { module = "androidx.fragment:fragment-ktx", version.ref = "fragm
 lifecycle-viewmodel = { module = "androidx.lifecycle:lifecycle-viewmodel-ktx", version.ref = "lifecycle" }
 androidx-constraintlayout = { group = "androidx.constraintlayout", name = "constraintlayout", version.ref = "constraintlayout" }
 
+# navigation
 androidx-navigation-fragment-ktx = { group = "androidx.navigation", name = "navigation-fragment-ktx", version.ref = "navigationFragmentKtx" }
 androidx-navigation-ui-ktx = { group = "androidx.navigation", name = "navigation-ui-ktx", version.ref = "navigationUiKtx" }
 androidx-navigation-safe-args = { group = "androidx.navigation", name = "navigation-safe-args-gradle-plugin", version.ref = "navigationFragmentKtx" }
+
+# room
+androidx-room-compiler = { module = "androidx.room:room-compiler", version.ref = "room" }
+androidx-room-runtime = { module = "androidx.room:room-runtime", version.ref = "room" }
+androidx-room-ktx = { module = "androidx.room:room-ktx", version.ref = "room" }
+
 
 # hilt
 hilt-android = { group = "com.google.dagger", name = "hilt-android", version.ref = "dagger-hilt" }
@@ -93,7 +103,6 @@ androidx-espresso-core = { group = "androidx.test.espresso", name = "espresso-co
 # third party
 glide = { module = "com.github.bumptech.glide:glide", version.ref = "glide" }
 naver-map = { group = "com.naver.maps", name = "map-sdk", version.ref = "naverMap" }
-
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
