--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -47,6 +47,10 @@ espressoCore = "3.6.1"
 glide = "4.16.0"
 naverMap = "3.20.0"
 
+okhttp = "4.12.0"
+retrofit = "2.11.0"
+converterGson = "2.9.0"
+
 
 [libraries]
 # kotlin
@@ -71,7 +75,6 @@ androidx-navigation-safe-args = { group = "androidx.navigation", name = "navigat
 androidx-room-compiler = { module = "androidx.room:room-compiler", version.ref = "room" }
 androidx-room-runtime = { module = "androidx.room:room-runtime", version.ref = "room" }
 androidx-room-ktx = { module = "androidx.room:room-ktx", version.ref = "room" }
-
 
 # hilt
 hilt-android = { group = "com.google.dagger", name = "hilt-android", version.ref = "dagger-hilt" }
@@ -103,6 +106,13 @@ androidx-espresso-core = { group = "androidx.test.espresso", name = "espresso-co
 # third party
 glide = { module = "com.github.bumptech.glide:glide", version.ref = "glide" }
 naver-map = { group = "com.naver.maps", name = "map-sdk", version.ref = "naverMap" }
+
+okhttp-bom = { module = "com.squareup.okhttp3:okhttp-bom", version.ref = "okhttp" }
+okhttp-logging-interceptor = { module = "com.squareup.okhttp3:logging-interceptor" }
+okhttp = { module = "com.squareup.okhttp3:okhttp" }
+
+retrofit = { module = "com.squareup.retrofit2:retrofit", version.ref = "retrofit" }
+converter-gson = { module = "com.squareup.retrofit2:converter-gson", version.ref = "converterGson" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
