--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -47,6 +47,7 @@ espressoCore = "3.6.1"
 #third party
 glide = "4.16.0"
 naverMap = "3.20.0"
+conscrypt = "2.5.2"
 
 okhttp = "4.12.0"
 retrofit = "2.11.0"
@@ -105,6 +106,10 @@ androidx-espresso-core = { group = "androidx.test.espresso", name = "espresso-co
 
 # third party
 glide = { module = "com.github.bumptech.glide:glide", version.ref = "glide" }
+glide-okhttp3-integration = { module = "com.github.bumptech.glide:okhttp3-integration", version.ref = "glide" }
+
+conscrypt = { module = "org.conscrypt:conscrypt-android", version.ref = "conscrypt" }
+
 naver-map = { group = "com.naver.maps", name = "map-sdk", version.ref = "naverMap" }
 
 okhttp-bom = { module = "com.squareup.okhttp3:okhttp-bom", version.ref = "okhttp" }
