--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -52,6 +52,7 @@ conscrypt = "2.5.2"
 okhttp = "4.12.0"
 retrofit = "2.11.0"
 
+kakaoShare = "2.20.6"
 
 [libraries]
 # kotlin
@@ -89,7 +90,7 @@ material = { group = "com.google.android.material", name = "material", version.r
 google-services = { module = "com.google.gms:google-services", version.ref = "google-services" }
 google-play-services = { group = "com.google.android.gms", name = "play-services-base", version.ref = "play-services-base" }
 play-services-location = { group = "com.google.android.gms", name = "play-services-location", version.ref = "play-services-base" }
-play-services-auth = { group = "com.google.android.gms", name = "play-services-auth", version.ref = "play-services-auth"}
+play-services-auth = { group = "com.google.android.gms", name = "play-services-auth", version.ref = "play-services-auth" }
 
 # firebase
 firebase-bom = { module = "com.google.firebase:firebase-bom", version.ref = "firebaseBom" }
@@ -118,6 +119,8 @@ okhttp = { module = "com.squareup.okhttp3:okhttp" }
 
 retrofit = { module = "com.squareup.retrofit2:retrofit", version.ref = "retrofit" }
 retrofit-kotlin-serialization-converter = { group = "com.jakewharton.retrofit", name = "retrofit2-kotlinx-serialization-converter", version.ref = "kotlinx-serialization-converter" }
+
+kakao-share = { module = "com.kakao.sdk:v2-share", version.ref = "kakaoShare" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
